WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312982
[LBSE] Fix isTransformed usage
https://bugs.webkit.org/show_bug.cgi?id=312982
Summary
[LBSE] Fix isTransformed usage
Rob Buis
Reported
2026-04-22 02:18:45 PDT
Fix isTransformed usage.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-04-22 02:21:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63313
EWS
Comment 2
2026-04-22 05:54:47 PDT
Committed
311767@main
(e1c0051a7dd4): <
https://commits.webkit.org/311767@main
> Reviewed commits have been landed. Closing PR #63313 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-22 05:55:12 PDT
<
rdar://problem/175335082
>
Alexey Proskuryakov
Comment 4
2026-04-22 10:39:58 PDT
***
Bug 312981
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug