[LBSE] Fix isTransformed usage https://bugs.webkit.org/show_bug.cgi?id=312982

Reviewed by Nikolas Zimmermann.

In an upcoming PR svg elements can set transforms without requiring
a layer, so prepare some if conditions for that. In addition, there
was no point checking the clip path/mask itself for its transform in
transformationMatrixFromChild, the important part is just the child
transform.

* Source/WebCore/rendering/svg/SVGBoundingBoxComputation.cpp:
(WebCore::SVGBoundingBoxComputation::handleRootOrContainer const):
* Source/WebCore/svg/SVGClipPathElement.cpp:
(WebCore::SVGClipPathElement::calculateClipContentRepaintRect):
* Source/WebCore/svg/SVGMaskElement.cpp:
(WebCore::SVGMaskElement::calculateMaskContentRepaintRect):

Canonical link: https://commits.webkit.org/311767@main